# multiTag

./: .gitmodules  CMakeLists.txt  README.md  multiTag.yaml  prj.conf
boards/dergraph/ibuttonmini/: Kconfig.defconfig  Kconfig.ibuttonmini  board.cmake  board.yml  ibuttonmini_nrf51822-pinctrl.dtsi  ibuttonmini_nrf51822.dts  ibuttonmini_nrf51822.yaml  ibuttonmini_nrf51822_defconfig
modules/google_fhd/: CMakeLists.txt  Kconfig  google_fhd.cpp  google_fhd.h  google_fhd_mbedtls_config.h
modules/google_fhd/zephyr/: module.yaml
src/: main.c  main.cpp  settings.cpp  settings.h
